# SapphireEngine

./: .gitignore  Makefile  README.md  SapphireEngine.sln  SapphireEngine.vcxproj  SapphireEngine.vcxproj.filters  run.bat  send.bat  source before cursor change.7z  source broken avf.7z  source crashy.7z  source.7z
SapphireEngine/source/: Config.cpp  Cursor.cpp  graphics.cpp  sprite.cpp  sprite.h
SapphireEngine/source/player-cpp-ffmpeg-sdl/: FFPlayer.cpp
SapphireEngine/source/toml11/: toml.hpp
ext/imgui/backends/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp
ext/loguru-master/build windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  loguru-config.cmake  loguru.pc  loguru.sln  loguru.vcxproj  loguru.vcxproj.filters
ext/loguru-master/build_switch/: Makefile  loguru.cpp  switch_additions.h
ext/toml11/: toml.hpp
include/: loguru.hpp
include/Engine/: AnimatedSprite.h  Audio.h  AudioClip.h  AudioEngine.h  Button.h  Config.h  Cursor.h  GUI.h  GUIEngine.h  Globals.h  Graphics.h  GuiStyles.h  IMGUIInclude.h  SapphireApp.h  Sprite.h  Utils.h
include/Engine/player-cpp-ffmpeg-sdl/: FFPlayer.h
linux/: CMakeLists.txt  deps.sh
linux/ext/loguru/: vita_additions.h
mac/: CMakeLists.txt  Readme.txt  RessourcesDirectory.hpp  RessourcesDirectory.mm
mac/imgui/: CMakeLists.txt
mac/imgui/backends/: imgui_impl_sdl2.cpp
msvc/: SapphireEngine.vcxproj  SapphireEngine.vcxproj.filters
msvc/SapphireEngine/: SapphireEngine.vcxproj  SapphireEngine.vcxproj.filters
source/: Config.h  Cursor.h  GUI.cpp  GuiStyles.h  SDL_TTF_ptr.h  Scene.cpp  audio.h  globals.h  loguru.cpp  loguru.hpp  main.cpp  utils.cpp
source/Engine/: AnimatedSprite.cpp  AnimatedSprite.h  AudioClip.cpp  AudioClip.h  AvP_AudioStreaming.cpp  AvP_AudioStreaming.h  AvP_BinkPlayback.cpp  AvP_BinkPlayback.h  AvP_RingBuffer.cpp  AvP_RingBuffer.h  Button.cpp  Button.h  Config.cpp  Config.h  Cursor.cpp  Cursor.h  GUI.cpp  GUI.h  Movie.cpp  Movie.h  SDL_ptr.h  Scene.cpp  Scene.h  audio.cpp  audio.h  graphics.cpp  graphics.h  sprite.cpp  sprite.h  utils.cpp  utils.h
source/Game/: AVF.cpp  AVF.h  Dependency.h  Loader.h
source/Game/HIFFChunks/ACT/: ACT.cpp  ACT.h
source/Game/oldhertools/: colorspace.cpp  crypt_misc.cpp  crypt_misc.hpp  lzss.hpp
source/Nancy/: AVF.cpp  AVF.h  CIFF.cpp  CIFF.h  Dependency.h  GUI.cpp  GUI.h  HIFF.cpp  HIFF.h  Loader.cpp  Loader.h
source/Nancy/HIFF Chunks/: SUM.cpp  SUM.h
source/Nancy/HIFF Chunks/ACT/: ACT.cpp  ACT.h
source/Nancy/HIFFChunks/: SUM.cpp
source/Nancy/HIFFChunks/ACT/: ACT.cpp
source/libbinkdec/: BinkAudio.cpp  BinkAudio.h  BinkDecoder.cpp  BinkDecoder.h  BinkVideo.cpp  BinkVideo.h  BitReader.cpp  BitReader.h  FFmpeg_includes.h  FileStream.cpp  FileStream.h  HuffmanVLC.cpp  HuffmanVLC.h  LogError.cpp  LogError.h  Util.cpp  avfft.c  avfft.h  binkdata.h  dct.c  dct.h  dct32.c  fft.c  fft.h  mdct.c  rdft.c  rdft.h
source/oldhertools/: avf.hpp  colorspace.cpp  colorspace.hpp  crypt_misc.cpp  crypt_misc.hpp  fileidx.cpp  lzss.cpp  lzss.hpp
source/player-cpp-ffmpeg-sdl/: AudioCallback.cpp  AudioCallback.h  AudioPacket.h  FFAudio.cpp  FFAudio.h  FFPlayer.cpp  FFPlayer.h  FFUtils.cpp  FFUtils.h  Player.cpp  Player.h  defs.h
src/: AnimatedSprite.cpp  Audio.cpp  AudioClip.cpp  AudioEngine.cpp  Button.cpp  Config.cpp  Cursor.cpp  GUI.cpp  GUIEngine.cpp  Graphics.cpp  SapphireApp.cpp  Sprite.cpp  Utils.cpp  main.cpp
src/player-cpp-ffmpeg-sdl/: AudioCallback.cpp  FFAudio.cpp  FFPlayer.cpp
switch/: Makefile
switch/ext/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
vita/: CMakeLists.txt  Fixing linking issues with VitaSDK _ gl33ntwine.htm  Fixing linking issues with VitaSDK _ gl33ntwine.mhtml
vita/Fixing linking issues with VitaSDK _ gl33ntwine_files/: all.min.css  app.min.js  bootstrap.min.css  css.css  css2.css  jekyll-theme-chirpy.css  loading-attribute-polyfill.min.css  magnific-popup.min.css  post.min.js  tocbot.min.js  utterances.htm
vita/Fixing linking issues with VitaSDK _ gl33ntwine_files/utterances_data/: utterances.6ec01640.js  utterances.css
vita/ext/loguru/: loguru.cpp
vita/ext/toml11/: ToruNiina-toml11- TOML for Modern C++.url
wiiu/: CMakeLists.txt  Makefile
